--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <body class="bg-gray-100 font-microsoft min-h-screen flex flex-col items-center justify-center p-4">
     <div class="quiz-container">
         <header class="text-center mb-6">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">詩歌填空測驗</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">老三詩歌填空測驗</h1>
+            <p class="text-gray-600">[逆水寒]溺水了咕嚕咕嚕結義用</p>
             <p class="text-gray-600">從下面的選項中選擇正確的字，完成詩句</p>
         </header>
         
@@ -70,7 +71,7 @@
         </main>
         
         <footer class="mt-8 text-center text-gray-500 text-sm">
-            <p>詩歌填空練習 &copy; 2023</p>
+            <p>溺水了咕嚕咕嚕 &copy; 2025</p>
         </footer>
     </div>
 
@@ -350,3 +351,4 @@
     </script>
 </body>
 </html>
+
